# experiments-2024-SAC-marl-neighbouring-strategies

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: results-CTDE-seed_1.csv  results-CTDE-seed_2.csv  results-CTDE-seed_3.csv  results-CTDE-seed_4.csv  results-CTDE-seed_5.csv  results-CTDE-seed_6.csv  results-CTDE-seed_7.csv  results-DTDE-NN-averaging-seed_1.csv  results-DTDE-NN-averaging-seed_2.csv  results-DTDE-NN-averaging-seed_3.csv  results-DTDE-NN-averaging-seed_4.csv  results-DTDE-NN-averaging-seed_5.csv  results-DTDE-NN-averaging-seed_6.csv  results-DTDE-NN-averaging-seed_7.csv  results-DTDE-NN-averaging-seed_8.csv  results-DTDE-NN-averaging-seed_9.csv  results-DTDE-NN-consensus-seed_1.csv  results-DTDE-NN-consensus-seed_2.csv  results-DTDE-NN-consensus-seed_3.csv  results-DTDE-NN-consensus-seed_4.csv  results-DTDE-NN-consensus-seed_5.csv  results-DTDE-NN-consensus-seed_6.csv  results-DTDE-NN-consensus-seed_7.csv  results-DTDE-NN-consensus-seed_8.csv  results-DTDE-NN-consensus-seed_9.csv  results-DTDE-NN-weigh-averaging-seed_1.csv  results-DTDE-NN-weigh-averaging-seed_2.csv  results-DTDE-NN-weigh-averaging-seed_3.csv  results-DTDE-NN-weigh-averaging-seed_4.csv  results-DTDE-NN-weigh-averaging-seed_5.csv  results-DTDE-NN-weigh-averaging-seed_6.csv  results-DTDE-NN-weigh-averaging-seed_7.csv  results-DTDE-NN-weigh-averaging-seed_8.csv  results-DTDE-NN-weigh-averaging-seed_9.csv  results-DTDE-experience-sharing-seed_1.csv  results-DTDE-experience-sharing-seed_2.csv  results-DTDE-experience-sharing-seed_3.csv  (+22 more)
docker/: Dockerfile
src/: main.py  (+3 more)
(+39 files in other folders)
