[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
ray = "^2.37.0"
numpy = "^2.1.1"
gymnasium = "^0.29.1"
ipycanvas = "^0.13.3"
pandas = "^2.2.3"
tree = "^0.2.4"
dm-tree = "^0.1.8"
pyarrow = "^17.0.0"
fsspec = "^2024.9.0"
typer = "^0.12.5"
scikit-image = "^0.24.0"
lz4 = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
