[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "1.25.2"
gymnasium = "^0.29.1"
ipycanvas = "^0.13.3"
pandas = "2.0.3"
tree = "^0.2.4"
dm-tree = "^0.1.8"
pyarrow = "^17.0.0"
fsspec = "^2024.9.0"
typer = "^0.12.5"
scikit-image = "^0.24.0"
lz4 = "^4.3.3"
fastjsonschema = "^2.20.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2023.12.1"
torch = "^2.4.1"
tensorboardx = "^2.6.2.2"
ray = "2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
